# openshift-ci-zstream-trigger

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  openshift-ci-re-trigger-example.config.yaml  pyproject.toml  tox.ini
.github/: in-solidarity.yml
ci_jobs_trigger/: app.py
ci_jobs_trigger/libs/: zstream_trigger.py
ci_jobs_trigger/libs/addons_webhook_trigger/: README.md  addons_webhook_trigger.py
ci_jobs_trigger/libs/jenkins/utils/: general.py  jenkins.py
ci_jobs_trigger/libs/openshift_ci/re_trigger/: README.md  job_db.py  re_trigger.py
ci_jobs_trigger/libs/openshift_ci/utils/: constants.py  openshift_ci.py
ci_jobs_trigger/libs/openshift_ci/zstream_trigger/: README.md  rosa_utils.py  zstream_trigger.py
ci_jobs_trigger/libs/openshift_ci_re_trigger/: openshift_ci_re_trigger.py
ci_jobs_trigger/libs/operators_iib_trigger/: README.md  iib_trigger.py
ci_jobs_trigger/libs/utils/: general.py
ci_jobs_trigger/tests/: conftest.py
ci_jobs_trigger/tests/addons_webhook_trigger/: test_addons_webhook_trigger.py
ci_jobs_trigger/tests/job_retriggering/: test_job_triggering.py
ci_jobs_trigger/tests/operators_iib_trigger/: test_operators_iib_trigger.py
ci_jobs_trigger/tests/zstream_trigger/: test_zstream_trigger.py
ci_jobs_trigger/utils/: constants.py  general.py  openshift_ci.py
config-examples/: addons-webhook-trigger-config.example.yaml  ci-iib-jobs-trigger-config.example.yaml  zstream-trigger-config.example.yaml
openshift-ci-zstream-trigger/: app.py
tests/job_retriggering/: test_job_triggering.py
(+4 files in other folders)
